src/test/ui/simd/intrinsic/generic-bitmask.stderr
error[E0511]: invalid monomorphization of `simd_bitmask` intrinsic: bitmask `u16`, expected `u8`
  --> $DIR/generic-bitmask.rs:53:22
   |
LL |         let _: u16 = simd_bitmask(m2);
   |                      ^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_bitmask` intrinsic: bitmask `u16`, expected `u8`
  --> $DIR/generic-bitmask.rs:56:22
   |
LL |         let _: u16 = simd_bitmask(m8);
   |                      ^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_bitmask` intrinsic: bitmask `u32`, expected `u16`
  --> $DIR/generic-bitmask.rs:59:22
   |
LL |         let _: u32 = simd_bitmask(m16);
   |                      ^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_bitmask` intrinsic: bitmask `u64`, expected `u32`
  --> $DIR/generic-bitmask.rs:62:22
   |
LL |         let _: u64 = simd_bitmask(m32);
   |                      ^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_bitmask` intrinsic: bitmask `u128`, expected `u64`
  --> $DIR/generic-bitmask.rs:65:23
   |
LL |         let _: u128 = simd_bitmask(m64);
   |                       ^^^^^^^^^^^^^^^^^

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0511`.
